Update index.html サンプル文を実際の情報に変更

--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="ja">
+<html lang="ja">s
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>LIVE SCHEDULE / topesuicida</title>
+<title>LIVE SCHEDULE / TOPE SUICIDA</title>
 
 <style>
 body {
@@ -122,33 +122,22 @@ footer {
 <div class="live-card">
   <img src="flyer1.jpg" alt="Flyer 1">
   <div class="live-info">
-    <strong>2025/03/10 (Mon)</strong><br>
-    東京・下北沢 ◯◯<br>
-    OPEN 18:00 / START 19:00
+    <strong>2026/04/15 (TUE)</strong><br>
+    札幌 161倉庫<br>
+    OPEN 19:00 / START 19:30
   </div>
-  <a href="reserve.html?date=20250310" class="reserve-btn">予約する</a>
+  <a href="reserve.html?date=20260415" class="reserve-btn">予約する</a>
 </div>
 
 <!-- ライブ2 -->
 <div class="live-card">
   <img src="flyer2.jpg" alt="Flyer 2">
   <div class="live-info">
-    <strong>2025/03/20 (Thu)</strong><br>
-    名古屋・栄 ◯◯<br>
-    OPEN 18:00 / START 19:00
+    <strong>2026/04/15 (THURS)</strong><br>
+    札幌 KLUB COUNTER ACTION<br>
+    OPEN 19:00 / START 19:30
   </div>
-  <a href="reserve.html?date=20250320" class="reserve-btn">予約する</a>
-</div>
-
-<!-- ライブ3 -->
-<div class="live-card">
-  <img src="flyer3.jpg" alt="Flyer 3">
-  <div class="live-info">
-    <strong>2025/03/30 (Sun)</strong><br>
-    大阪・心斎橋 ◯◯<br>
-    OPEN 18:00 / START 19:00
-  </div>
-  <a href="reserve.html?date=20250330" class="reserve-btn">予約する</a>
+  <a href="reserve.html?date=20260416" class="reserve-btn">予約する</a>
 </div>
 
 <!-- 複数日予約 -->
@@ -161,7 +150,7 @@ footer {
 </div>
 
 <footer>
-  © 2025 topesuicida
+  © 2025 TOPE SUICIDA
 </footer>
 
 </body>
