Update index.html 微調整

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ja">s
+<html lang="ja">
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -107,7 +107,7 @@ footer {
 <body>
 
 <header>
-  topesuicida
+  TOPE SUICIDA
 </header>
 
 <!-- メイン画像（フライヤー） -->
@@ -139,9 +139,6 @@ footer {
   </div>
   <a href="reserve.html?date=20260416" class="reserve-btn">予約する</a>
 </div>
-
-<!-- 複数日予約 -->
-<a href="reserve.html" class="reserve-big">複数日まとめて予約する</a>
 
 <!-- 小さく地味なリンク -->
 <div class="footer-links">
