Update index.html リンク変更、ヘッダー画像変更

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@ footer {
 <!-- メイン画像（フライヤー） -->
 <div class="main-visual">
   <!-- ここをあなたのライブ画像に差し替え -->
-  <img src="main.jpg" alt="LIVE IMAGE">
+  <img src="logo_2022.PNG" alt="IMAGE">
 </div>
 
 <h2 class="section-title">LIVE SCHEDULE</h2>
@@ -142,8 +142,8 @@ footer {
 
 <!-- 小さく地味なリンク -->
 <div class="footer-links">
-  <a href="merch.html">Merch</a>
-  <a href="subscribe.html">Subscribe</a>
+  <a href="https://forms.gle/LYEmUP6FBkYBVHtJ6">MERCH</a>
+  <a href="https://www.tunecore.co.jp/artists/topesuicida">LISTEN NOW</a>
 </div>
 
 <footer>
