Update index.html テキスト変更

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>LIVE SCHEDULE / TOPE SUICIDA</title>
+<title>SHOW DATES / TOPE SUICIDA</title>
 
 <style>
 body {
@@ -116,7 +116,7 @@ footer {
   <img src="logo_2022.PNG" alt="IMAGE">
 </div>
 
-<h2 class="section-title">LIVE SCHEDULE</h2>
+<h2 class="section-title">SHOW DATES</h2>
 
 <!-- ライブ1 -->
 <div class="live-card">
