Update index.html 未完成箇所をコメントアウト

--- a/index.html
+++ b/index.html
@@ -106,13 +106,12 @@ footer {
 
 <body>
 
-<header>
+<!-- メ<header>
   TOPE SUICIDA
-</header>
+</header> -->
 
 <!-- メイン画像（フライヤー） -->
 <div class="main-visual">
-  <!-- ここをあなたのライブ画像に差し替え -->
   <img src="logo_2022.PNG" alt="IMAGE">
 </div>
 
@@ -120,7 +119,7 @@ footer {
 
 <!-- ライブ1 -->
 <div class="live-card">
-  <img src="flyer1.jpg" alt="Flyer 1">
+  <!-- <img src="flyer1.jpg" alt="Flyer 1"> -->
   <div class="live-info">
     <strong>2026/04/15 (TUE)</strong><br>
     札幌 161倉庫<br>
@@ -131,7 +130,7 @@ footer {
 
 <!-- ライブ2 -->
 <div class="live-card">
-  <img src="flyer2.jpg" alt="Flyer 2">
+  <!-- <img src="flyer2.jpg" alt="Flyer 2"> -->
   <div class="live-info">
     <strong>2026/04/15 (THURS)</strong><br>
     札幌 KLUB COUNTER ACTION<br>
@@ -140,7 +139,6 @@ footer {
   <a href="reserve.html?date=20260416" class="reserve-btn">予約する</a>
 </div>
 
-<!-- 小さく地味なリンク -->
 <div class="footer-links">
   <a href="https://forms.gle/LYEmUP6FBkYBVHtJ6">MERCH</a>
   <a href="https://www.tunecore.co.jp/artists/topesuicida">LISTEN NOW</a>
