Update index.html その他リンク追加

--- a/index.html
+++ b/index.html
@@ -171,7 +171,16 @@ margin-top: 35px;
 
 <footer>
   © 2025 TOPE SUICIDA
+  <a href="https://forms.gle/hzorgVcx4G1QXs5t8" class="etc-link">etc</a>
 </footer>
+<style>
+.etc-link {
+  color: transparent;     /* 文字を透明化 */
+  text-decoration: none;
+  font-size: 3px;         /* 小さくする */
+  margin-left: 5px;
+}
+</style>
 <!-- /container -->
 </body>
 </html>
