--- a/index.html
+++ b/index.html
@@ -150,23 +150,7 @@ margin-top: 35px;
     札幌 161倉庫<br>
     OPEN 19:00 / START 19:30
   </div>
-  <a href="reserve.html?date=20260415" class="reserve-btn">予約する</a>
-</div>
-
-<!-- ライブ2 -->
-<div class="live-card">
-  <!-- <img src="flyer2.jpg" alt="Flyer 2"> -->
-  <div class="live-info">
-    <strong>2026/04/16 (THURS)</strong><br>
-    札幌 KLUB COUNTER ACTION<br>
-    OPEN 19:00 / START 19:30
-  </div>
-  <a href="reserve.html?date=20260416" class="reserve-btn">予約する</a>
-</div>
-
-<div class="footer-links">
-  <a href="https://forms.gle/LYEmUP6FBkYBVHtJ6">MERCH</a>
-  <a href="https://www.tunecore.co.jp/artists/topesuicida">LISTEN NOW</a>
+  <a href="https://docs.google.com/forms/d/e/1FAIpQLSec94qg9fXqu72TaQx5SlGjsDW_yG5PjPlSLkUz5E2UHuzGcg/viewform?usp=dialog" class="reserve-btn">予約する</a>
 </div>
 
 <footer>
