Update index.html 4/15, 16情報更新

--- a/index.html
+++ b/index.html
@@ -146,13 +146,41 @@ margin-top: 35px;
 <div class="live-card">
   <!-- <img src="flyer1.jpg" alt="Flyer 1"> -->
   <div class="live-info">
-    <strong>2026/04/15 (TUE)</strong><br>
-    札幌 161倉庫<br>
-    OPEN 19:00 / START 19:30
+    <strong>HKFY JAPAN TOUR 2026</strong><br>
+    <strong>4/15(WED)</strong><br>
+            at 161倉庫<br>
+            OPEN 19:00 START 19:30<br>
+            TIX ¥4,200<br>
+            w/<br>
+            高倉健(東京)<br>
+            ANALSKULLFUCK(東京)<br>
+            MORE BLOOD IS SHED<br>
+            TOPE SUICIDA<br>
+            REALIZED<br><br>
+    <strong>4/16(THURS)</strong><br>
+            at KLUB COUNTER ACTION<br>
+            OPEN 19:00 START 19:30<br>
+            TIX ¥4,200<br>
+            w/<br>
+            高倉健(東京)<br>
+            ANALSKULLFUCK(東京)<br>
+            CRUDE(函館)<br>
+            TOPE SUICIDA<br>
+            BUSTER<br>
+            DJ WAILL<br>
+    <br>
+    <br>
+    <br>
   </div>
   <a href="https://docs.google.com/forms/d/e/1FAIpQLSec94qg9fXqu72TaQx5SlGjsDW_yG5PjPlSLkUz5E2UHuzGcg/viewform?usp=dialog" class="reserve-btn">予約する</a>
 </div>
 
+<div class="footer-links">
+  <a href="https://forms.gle/LYEmUP6FBkYBVHtJ6">MERCH</a>
+  <a href="https://www.tunecore.co.jp/artists/topesuicida">LISTEN NOW</a>
+  <a href="https://docs.google.com/forms/d/e/1FAIpQLSec94qg9fXqu72TaQx5SlGjsDW_yG5PjPlSLkUz5E2UHuzGcg/viewform?usp=dialog" class="reserve-btn">予約する</a>
+</div>
+  
 <footer>
   © 2025 TOPE SUICIDA
   <a href="https://forms.gle/hzorgVcx4G1QXs5t8" class="etc-link">etc</a>
