Update index.html 文言調整

--- a/index.html
+++ b/index.html
@@ -124,6 +124,12 @@ margin-top: 35px;
 }
 }
   
+ .big-attention {
+  font-size: 32px;
+  font-weight: bold;
+  color: #d60000;
+}
+ 
 </style>
 </head>
 
@@ -146,9 +152,8 @@ margin-top: 35px;
 <div class="live-card">
   <!-- <img src="flyer1.jpg" alt="Flyer 1"> -->
   <div class="live-info">
-    <strong>HKFY JAPAN TOUR 2026</strong><br>
-    <strong>4/15(WED)</strong><br>
-            at 161倉庫<br>
+    <strong class="big-attention">HKFY JAPAN TOUR 2026</strong><br>
+    <strong>4/15(WED) at 161倉庫</strong><br>
             OPEN 19:00 START 19:30<br>
             TIX ¥4,200<br>
             w/<br>
@@ -157,8 +162,7 @@ margin-top: 35px;
             MORE BLOOD IS SHED<br>
             TOPE SUICIDA<br>
             REALIZED<br><br>
-    <strong>4/16(THURS)</strong><br>
-            at KLUB COUNTER ACTION<br>
+    <strong>4/16(THURS) at KLUB COUNTER ACTION</strong><br>
             OPEN 19:00 START 19:30<br>
             TIX ¥4,200<br>
             w/<br>
@@ -168,9 +172,6 @@ margin-top: 35px;
             TOPE SUICIDA<br>
             BUSTER<br>
             DJ WAILL<br>
-    <br>
-    <br>
-    <br>
   </div>
   <a href="https://docs.google.com/forms/d/e/1FAIpQLSec94qg9fXqu72TaQx5SlGjsDW_yG5PjPlSLkUz5E2UHuzGcg/viewform?usp=dialog" class="reserve-btn">予約する</a>
 </div>
