Update index.html SNSボタン追加、文言修正

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 <title>SHOW DATES / TOPE SUICIDA</title>
 
 <style>
@@ -124,12 +125,41 @@ margin-top: 35px;
 }
 }
   
- .big-attention {
+.big-attention {
   font-size: 32px;
   font-weight: bold;
   color: #d60000;
 }
- 
+.sns-links {
+    display: flex;
+    flex-direction: column;
+    gap: 14px;
+    max-width: 320px;
+    margin: 0 auto;
+  }
+
+  .sns-link {
+    display: flex;
+    align-items: center;
+    gap: 14px;
+    padding: 14px 18px;
+    border-radius: 30px;
+    text-decoration: none;
+    font-weight: bold;
+    color: #fff;
+    font-size: 16px;
+  }
+
+  .sns-link i {
+    font-size: 22px;
+  }
+
+  .fb { background: #1877f2; }
+  .x { background: #000000; }
+  .ig {
+    background: linear-gradient(45deg, #f58529, #dd2a7b, #8134af);
+  }
+  .threads { background: #000000; } 
 </style>
 </head>
 
@@ -154,28 +184,44 @@ margin-top: 35px;
   <div class="live-info">
     <strong class="big-attention">HKFY JAPAN TOUR 2026</strong><br>
     <strong>4/15(WED) at 161倉庫</strong><br>
-            w/<br>
-            高倉健(東京)<br>
-            ANALSKULLFUCK(東京)<br>
-            MORE BLOOD IS SHED<br>
-            TOPE SUICIDA<br>
-            REALIZED<br><br>
+            w/高倉健(東京)<br>
+              ANALSKULLFUCK(東京)<br>
+              MORE BLOOD IS SHED<br>
+              TOPE SUICIDA<br>
+              REALIZED<br><br>
             OPEN 19:00 START 19:30<br>
             TIX ¥4,200<br>
     <strong>4/16(THURS) at KLUB COUNTER ACTION</strong><br>
-            w/<br>
-            高倉健(東京)<br>
-            ANALSKULLFUCK(東京)<br>
-            CRUDE(函館)<br>
-            TOPE SUICIDA<br>
-            BUSTER<br>
-            DJ WAILL<br>
+            w/高倉健(東京)<br>
+              ANALSKULLFUCK(東京)<br>
+              CRUDE(函館)<br>
+              TOPE SUICIDA<br>
+              BUSTER<br>
+              DJ WAILL<br>
             OPEN 19:00 START 19:30<br>
             TIX ¥4,200<br>
   </div>
   <a href="https://docs.google.com/forms/d/e/1FAIpQLSec94qg9fXqu72TaQx5SlGjsDW_yG5PjPlSLkUz5E2UHuzGcg/viewform?usp=dialog" class="reserve-btn">予約する</a>
 </div>
+  
+<div class="sns-links">
+  <a href="https://www.facebook.com/あなたのURL" class="sns-link fb" target="_blank">
+    <i class="fa-brands fa-facebook-f"></i> Facebook
+  </a>
 
+  <a href="https://x.com/あなたのURL" class="sns-link x" target="_blank">
+    <i class="fa-brands fa-x-twitter"></i> X
+  </a>
+
+  <a href="https://www.instagram.com/あなたのURL" class="sns-link ig" target="_blank">
+    <i class="fa-brands fa-instagram"></i> Instagram
+  </a>
+
+  <a href="https://www.threads.net/@あなたのURL" class="sns-link threads" target="_blank">
+    <i class="fa-brands fa-threads"></i> Threads
+  </a>
+</div>
+  
 <div class="footer-links">
   <a href="https://forms.gle/LYEmUP6FBkYBVHtJ6">MERCH</a>
   <a href="https://www.tunecore.co.jp/artists/topesuicida">LISTEN NOW</a>
