Update index.html SNSボタン調整、文言調整

--- a/index.html
+++ b/index.html
@@ -130,36 +130,24 @@ margin-top: 35px;
   font-weight: bold;
   color: #d60000;
 }
-.sns-links {
+.sns-icons {
     display: flex;
-    flex-direction: column;
-    gap: 14px;
-    max-width: 320px;
-    margin: 0 auto;
-  }
-
-  .sns-link {
-    display: flex;
+    justify-content: center;
     align-items: center;
-    gap: 14px;
-    padding: 14px 18px;
-    border-radius: 30px;
-    text-decoration: none;
-    font-weight: bold;
-    color: #fff;
-    font-size: 16px;
-  }
+    gap: 26px;
+}
 
-  .sns-link i {
-    font-size: 22px;
-  }
+.sns-icons a {
+  color: #ffffff;
+  font-size: 28px;
+  text-decoration: none;
+  transition: opacity 0.2s ease, transform 0.2s ease;
+}
 
-  .fb { background: #1877f2; }
-  .x { background: #000000; }
-  .ig {
-    background: linear-gradient(45deg, #f58529, #dd2a7b, #8134af);
-  }
-  .threads { background: #000000; } 
+.sns-icons a:hover {
+  opacity: 0.7;
+  transform: scale(1.1);
+}
 </style>
 </head>
 
@@ -185,40 +173,40 @@ margin-top: 35px;
     <strong class="big-attention">HKFY JAPAN TOUR 2026</strong><br>
     <strong>4/15(WED) at 161倉庫</strong><br>
             w/高倉健(東京)<br>
-              ANALSKULLFUCK(東京)<br>
-              MORE BLOOD IS SHED<br>
-              TOPE SUICIDA<br>
-              REALIZED<br><br>
+            &nbsp;&nbsp;ANALSKULLFUCK(東京)<br>
+            &nbsp;&nbsp;MORE BLOOD IS SHED<br>
+            &nbsp;&nbsp;TOPE SUICIDA<br>
+            &nbsp;&nbsp;REALIZED<br>
             OPEN 19:00 START 19:30<br>
             TIX ¥4,200<br>
     <strong>4/16(THURS) at KLUB COUNTER ACTION</strong><br>
             w/高倉健(東京)<br>
-              ANALSKULLFUCK(東京)<br>
-              CRUDE(函館)<br>
-              TOPE SUICIDA<br>
-              BUSTER<br>
-              DJ WAILL<br>
+            &nbsp;&nbsp;ANALSKULLFUCK(東京)<br>
+            &nbsp;&nbsp;CRUDE(函館)<br>
+            &nbsp;&nbsp;TOPE SUICIDA<br>
+            &nbsp;&nbsp;BUSTER<br>
+            &nbsp;&nbsp;DJ WAILL<br>
             OPEN 19:00 START 19:30<br>
             TIX ¥4,200<br>
   </div>
   <a href="https://docs.google.com/forms/d/e/1FAIpQLSec94qg9fXqu72TaQx5SlGjsDW_yG5PjPlSLkUz5E2UHuzGcg/viewform?usp=dialog" class="reserve-btn">予約する</a>
 </div>
   
-<div class="sns-links">
-  <a href="https://www.facebook.com/あなたのURL" class="sns-link fb" target="_blank">
-    <i class="fa-brands fa-facebook-f"></i> Facebook
+<div class="sns-icons">
+  <a href="https://www.facebook.com/あなたのID" target="_blank" aria-label="Facebook">
+    <i class="fa-brands fa-facebook-f"></i>
   </a>
 
-  <a href="https://x.com/あなたのURL" class="sns-link x" target="_blank">
-    <i class="fa-brands fa-x-twitter"></i> X
+  <a href="https://x.com/あなたのID" target="_blank" aria-label="X">
+    <i class="fa-brands fa-x-twitter"></i>
   </a>
 
-  <a href="https://www.instagram.com/あなたのURL" class="sns-link ig" target="_blank">
-    <i class="fa-brands fa-instagram"></i> Instagram
+  <a href="https://www.instagram.com/あなたのID" target="_blank" aria-label="Instagram">
+    <i class="fa-brands fa-instagram"></i>
   </a>
 
-  <a href="https://www.threads.net/@あなたのURL" class="sns-link threads" target="_blank">
-    <i class="fa-brands fa-threads"></i> Threads
+  <a href="https://www.threads.net/@あなたのID" target="_blank" aria-label="Threads">
+    <i class="fa-brands fa-threads"></i>
   </a>
 </div>
   
