Update index.html 改行追加

--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@ margin-top: 35px;
             &nbsp;&nbsp;&nbsp;&nbsp;TOPE SUICIDA<br>
             &nbsp;&nbsp;&nbsp;&nbsp;REALIZED<br>
             OPEN 19:00 START 19:30<br>
-            TIX ¥4,200<br>
+            TIX ¥4,200<br><br>
     <strong>4/16(THURS) at KLUB COUNTER ACTION</strong><br>
             w/高倉健(東京)<br>
             &nbsp;&nbsp;&nbsp;&nbsp;ANALSKULLFUCK(東京)<br>
