Update index.html 画像非表示化

--- a/index.html
+++ b/index.html
@@ -194,10 +194,10 @@ margin-top: 35px;
 <div class="live-card">
   <!-- <img src="flyer1.jpg" alt="Flyer 1"> -->
   <div class="live-info">
-    <div class="double-images">
+    <!-- <div class="double-images">
     <img src="20260415_161.JPG" alt="161">
     <img src="20260416_kca.jpg" alt="kca">
-    </div>
+    </div> -->
     <strong class="big-attention">HKFY JAPAN TOUR 2026</strong><br>
     <strong>4/15(WED) at 161倉庫</strong><br>
             w/高倉健(東京)<br>
